force-app/main/default/objects/Solicitud_Compra__c/Solicitud_Compra__c.object-meta.xml
<CustomObject>
    <label>Solicitud Compra</label>
    <nameField>
        <label>Solicitud Compra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes Compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>