force-app/main/default/objects/Solicitud_Compra__c/fields/Dias_Retrasado__c.field-meta.xml
<CustomField>
    <fullName>Dias_Retrasado__c</fullName>
    <label>Dias Retrasado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>