force-app/main/default/objects/Solicitud_Compra__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitudes Compra (Responsable)</relationshipLabel>
    <relationshipName>Responsable</relationshipName>
    <type>Lookup</type>
</CustomField>